--- a/.harness/pipelines/master.yaml
+++ b/.harness/pipelines/master.yaml
@@ -1,5 +1,5 @@
 pipeline:
-  identifier: Build_jenkins_docker_example_1684748557751
+  identifier: jenkins_docker
   name: Build jenkins-docker-example
   orgIdentifier: default
   projectIdentifier: Fruits
