--- a/.harness/pipelines/master.yaml
+++ b/.harness/pipelines/master.yaml
@@ -9,32 +9,58 @@ pipeline:
         build:
           spec:
             branch: master
-          type: branch   
+          type: branch
         connectorRef: account.Github
         repoName: laluondru/jenkins-docker-example
   stages:
-    - stage:
-        identifier: build
-        name: build
-        spec:
-          cloneCodebase: true
-          execution:
-            steps:
-              - step:
-                  identifier: dockerbuild
-                  name: docker_build
-                  spec:
-                    image: plugins/docker
-                    settings:
-                      dry_run: "true"
-                      repo: hello/world
-                      tags: latest
-                  timeout: ""
-                  type: Plugin
-          platform:
-            arch: Amd64
-            os: Linux
-          runtime:
-            spec: {}
-            type: Cloud
-        type: CI
+    - parallel:
+        - stage:
+            identifier: build
+            name: build
+            spec:
+              cloneCodebase: true
+              execution:
+                steps:
+                  - step:
+                      identifier: dockerbuild
+                      name: docker_build
+                      spec:
+                        image: plugins/docker
+                        settings:
+                          dry_run: "true"
+                          repo: hello/world
+                          tags: latest
+                      timeout: ""
+                      type: Plugin
+              platform:
+                arch: Amd64
+                os: Linux
+              runtime:
+                spec: {}
+                type: Cloud
+            type: CI
+        - stage:
+            name: Dev
+            identifier: Dev
+            description: ""
+            type: CI
+            spec:
+              cloneCodebase: true
+              platform:
+                os: Linux
+                arch: Amd64
+              runtime:
+                type: Cloud
+                spec: {}
+              execution:
+                steps:
+                  - step:
+                      type: S3Upload
+                      name: S3Upload_1
+                      identifier: S3Upload_1
+                      spec:
+                        connectorRef: AWS_Connector
+                        region: us-east-1
+                        bucket: aidmeo
+                        sourcePath: new
+                      failureStrategies: []
